# ChatPT

./: .gitignore  DEMO.md  PITCH.md  README.md  package-lock.json  presentation.html
.claude/: CLAUDE.md  settings.json
.claude/hooks/: lint-backend.sh  lint-frontend.sh
RAG/: CLAUDE.md  requirements.txt
RAG/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
RAG/api/: main.py
RAG/retrieval/: __init__.py  client.py  retriever.py
RAG/retrieval/ingestion_pipeline/: __init__.py  chunking.py  embedding.py  eval.py  ingest.py
RAG/tests/: conftest.py  test_agent.py  test_embedding.py  test_parsing.py  test_retriever.py
backend/: .env.example  main.py  pyproject.toml
backend/agent/: __init__.py  context.py  loop.py  prompts.py  tools.py
backend/chains/: workout_chain.py
backend/data/: muscle_groups.json
backend/dedalus_tools/: CLAUDE.md  __init__.py  api.py  convex_client.py  runner.py  tools.py
backend/dedalus_tools/retrieval/: __init__.py  client.py  reranker.py  retriever.py
backend/dedalus_tools/retrieval/ingestion_pipeline/: __init__.py  chunking.py  ingest.py  parsing.py
backend/llm/: dedalus_chat_model.py
backend/schemas/: workout.py
backend/services/: image_gen.py
docs/: CONTRACT.md  process.py  process_batch.py  test_rag.py
docs/.vector_cache/: chunk_vectors.npy
docs/test_sessions/: session_1770482109.json
frontend/: bun.lockb  package-lock.json  package.json
frontend/convex/: body.ts  chat.ts  knots.ts  muscles.ts  schema.ts  users.ts  workouts.ts
frontend/public/: presentation.html
frontend/src/: middleware.ts
(+38 files in other folders)
