[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "convex>=0.7.0",
    "dedalus-labs>=0.2.0",
    "fastapi>=0.128.3",
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "pydantic>=2.12.5",
    "uvicorn>=0.34.0",
]
